# SEACAT-ROS2-LoRa-Bridge

./: ros2_lora.launch.py  ros2_lora.py  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_lora/lib/ros2_lora/: ros2_lora.py
install/ros2_lora/share/ros2_lora/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
